--- a/admin.css
+++ b/admin.css
@@ -180,12 +180,15 @@ header {
   display: flex;
   gap: 15px;
   flex-wrap: wrap;
+  margin-top: 20px;
 }
 .ad-card {
   background: white;
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  max-height: 400px;
 }
 .ad-card img {
   width: 100%;
@@ -199,6 +202,8 @@ header {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-width: 30%;
+  margin: 0 auto;
 }
 .ad-form input,
 .ad-form button {
@@ -374,27 +379,13 @@ header {
   border-color: var(--secondary);
 }
 
-/* Responsive */
-@media (max-width: 768px) {
-  .modal-content {
-    max-width: 95%;
-  }
-  .personDetailsLowerContainer {
-    grid-template-columns: 1fr;
-  }
-  .profile-header {
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-  }
-  .profile-header img {
-    width: 120px;
-    height: 120px;
-  }
-}
-
 /* temp */
-
+.advertiseInactive {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
 /* Responsive */
 @media (max-width: 900px) {
   #menuBtn {
@@ -417,8 +408,35 @@ header {
   #main-content {
     margin-left: 0;
   }
+  .ad-form {
+    max-width: 100%;
+  }
+  .ad-card {
+    margin: 0 auto;
+  }
+  .ads-section {
+    max-width: 100%;
+    margin-bottom: 7px;
+  }
 }
-
+/* Responsive */
+@media (max-width: 768px) {
+  .modal-content {
+    max-width: 95%;
+  }
+  .personDetailsLowerContainer {
+    grid-template-columns: 1fr;
+  }
+  .profile-header {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+  .profile-header img {
+    width: 120px;
+    height: 120px;
+  }
+}
 /* Large screen: 6 cards per row */
 @media (min-width: 1400px) {
   .users-grid {
