single biodata details fetching done

--- a/admin.css
+++ b/admin.css
@@ -173,6 +173,7 @@ header {
   padding: 6px 12px;
   border-radius: 4px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 /* Advertisement */
@@ -220,7 +221,7 @@ header {
 /* Modal */
 /* Modal Base */
 #modal {
-  display: none;
+  display: flex;
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.5);
